--- a/client/config.yml
+++ b/client/config.yml
@@ -16,6 +16,7 @@ experiment-params:
   random_seed: 45
   input_dir: /srv/diamond/sosp/example-bird
   output_dir: ../logs/
+  skip_test: false 
 only_use_better_models: true
 retrain_policy:
   only_positives: false
